# alchemy_game

./: .gitignore  .mcp.json  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/skills/new-mixture/: SKILL.md
backend/apothecaria/: config.py  main.py
backend/apothecaria/api/: customers.py  inventory.py  player.py  store.py
backend/apothecaria/content/: customers.json  recipes.json  store.json
backend/apothecaria/db/: models.py  seed.py
backend/apothecaria/domain/: brewing.py  economy.py  models.py  store.py
backend/apothecaria/mcp/: __init__.py  server.py
backend/tests/: test_api_customers.py  test_api_recipes.py  test_api_store.py  test_brewing.py  test_config.py  test_customer_queue.py  test_db_models.py  test_economy.py  test_mcp_server.py  test_seed.py  test_store.py
docs/plans/: fog-veil-recipe.md
frontend/public/sprites/potions/: ATTRIBUTION.md
frontend/src/: main.ts
frontend/src/api/: client.ts
frontend/src/scene/: shelf.ts
frontend/src/state/: session.ts
frontend/src/styles/: main.css
frontend/src/ui/: brew-result.ts  inventory-bar.ts
workshop/: 08-skill-creator.md  09-plugins-playwright.md  11-mcp-server.md  12-pydantic-ai-agent.md
